# 42seoul

./: .get_next_line_bonus.c.swp  .gitignore  .gitignore.swp  1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  CMakeLists.txt  Dockerfile  Makefile  README.md  Untitled Diagram.drawio  a.out  cgi_php.php  compare.c  config.hpp  confirm.c  eof.c  file_should_exist_after  ft_bzero.c  ft_calloc.c  ft_memcpy.c  ft_printf.c  ft_printf.h  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  hello.c  (+21 more)
.run/: webserv.run.xml
YoupiBanane/: index.html
config/: Conf.cpp  Conf.hpp  Config.cpp  Config.hpp  ConfigReader.cpp  ConfigSyntax.cpp
ft_containers/: .gitignore
ft_printf/: Makefile  ft_printf.c
ft_server/: Dockerfile  README.md
ft_services/: setup.sh
get_next_line/: get_next_line.c  get_next_line_utils.c  get_next_line_utils_bonus.c
html/: 400.html  index.html
inc/: ft_printf.h
incs/: AutoIndex.hpp  CGI.hpp  Config.hpp  List.hpp  Map.hpp  ParsedRequest.hpp  Queue.hpp  RequestConfig.hpp  RequestInspect.hpp  Response.hpp  SayiRequest.hpp  Server.hpp  ServerManager.hpp  Stack.hpp  Vector.hpp  ft_containers.hpp  iterator.hpp  iterator.hpp.gch  webserv.hpp
lib/: util.c
libasm/: main.cpp  sample.conf
libft/: .ft_strncmp.c.swp  Makefile  a.out  ft_atoi.c  ft_memmove.c  ft_memset.c  ft_split.c  ft_strlcat.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  libft.h  main.c
page/: image.html
philo_one/: Makefile  a.out  fork.c  main.c  (+8 more)
(+511 files in other folders)
